content/v1.3.0/en/api/catalog-other.md
---
title: Other 类目录 / Class Catalog
extra:
  sidebar: auto
---
# Other Class Catalog

## Mental Model

Treat `Other Class Catalog` as an entry point or data node for this subsystem: inspect its properties first, then decide which methods to call.

This page lists every public type in this area from the 1.3.0 source, grouped by namespace. **30** types total, **27** with a deep doc page (linked). Auto-generated by `tools/gen-class-catalog.mjs`.

> Legend: C=class S=struct I=interface E=enum. 🔗 = has a deep doc page.

## (global) (5)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [EmptyGamepadNavigationContext](/v1.3.15/en/api/campaign-ext/EmptyGamepadNavigationContext) | 🔗 |
| C | [GauntletGamepadNavigationContext](/v1.3.15/en/api/campaign-ext/GauntletGamepadNavigationContext) | 🔗 |
| I | [IChatHandler](/v1.3.15/en/api/campaign-ext/IChatHandler) | 🔗 |
| I | [IGamepadNavigationContext](/v1.3.15/en/api/campaign-ext/IGamepadNavigationContext) | 🔗 |
| E | [WindingOrder](/v1.3.15/en/api/campaign-ext/WindingOrder) | 🔗 |

## MBHelpers (1)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | BannerHelper | — |

## Sandobx.GauntletUI.Missions (1)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [GauntletMainAgentDetectionView](./campaign-ext/GauntletMainAgentDetectionView) | 🔗 |

## Storymode.Missions (2)

| | 名称 Name | 文档 Doc |
|---|---|---|
| E | MissionState | — |
| C | [SneakIntoTheVillaMissionController](./campaign-ext/SneakIntoTheVillaMissionController) | 🔗 |

## TaleWorlds.AchievementSystem (4)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [Achievement](/v1.3.15/en/api/campaign-ext/Achievement) | 🔗 |
| C | [AchievementManager](/v1.3.15/en/api/campaign-ext/AchievementManager) | 🔗 |
| I | [IAchievementService](/v1.3.15/en/api/campaign-ext/IAchievementService) | 🔗 |
| C | [TestAchievementService](/v1.3.15/en/api/campaign-ext/TestAchievementService) | 🔗 |

## TaleWorlds.ActivitySystem (6)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [Activity](/v1.3.15/en/api/campaign-ext/Activity) | 🔗 |
| C | [ActivityManager](/v1.3.15/en/api/campaign-ext/ActivityManager) | 🔗 |
| E | [ActivityOutcome](/v1.3.15/en/api/campaign-ext/ActivityOutcome) | 🔗 |
| E | [ActivityTransition](/v1.3.15/en/api/campaign-ext/ActivityTransition) | 🔗 |
| I | [IActivityService](/v1.3.15/en/api/campaign-ext/IActivityService) | 🔗 |
| C | [TestActivityService](/v1.3.15/en/api/campaign-ext/TestActivityService) | 🔗 |

## TaleWorlds.LinQuick (2)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [LinQuick](/v1.3.15/en/api/campaign-ext/LinQuick) | 🔗 |
| C | [Min](/v1.3.15/en/api/campaign-ext/Min) | 🔗 |

## TaleWorlds.ModuleManager (9)

| | 名称 Name | 文档 Doc |
|---|---|---|
| S | [DependedModule](/v1.3.15/en/api/campaign-ext/DependedModule) | 🔗 |
| C | Extensions | — |
| I | [IPlatformModuleExtension](/v1.3.15/en/api/campaign-ext/IPlatformModuleExtension) | 🔗 |
| E | [ModuleCategory](/v1.3.15/en/api/campaign-ext/ModuleCategory) | 🔗 |
| C | [ModuleHelper](/v1.3.15/en/api/campaign-ext/ModuleHelper) | 🔗 |
| C | [ModuleInfo](/v1.3.15/en/api/campaign-ext/ModuleInfo) | 🔗 |
| E | [ModuleType](/v1.3.15/en/api/campaign-ext/ModuleType) | 🔗 |
| C | [SubModuleInfo](/v1.3.15/en/api/campaign-ext/SubModuleInfo) | 🔗 |
| E | [SubModuleTags](/v1.3.15/en/api/campaign-ext/SubModuleTags) | 🔗 |
