content/v1.3.15/en/api/catalog-other.md
---
title: Other 类目录 / Class Catalog
extra:
  sidebar: auto
---
# Other Class Catalog

## Mental Model

Treat `Other Class Catalog` as an entry point or data node for this subsystem: inspect its properties first, then decide which methods to call.

This page lists every public type in this area from the 1.3.15 source, grouped by namespace. **62** types total, **56** with a deep doc page (linked). Auto-generated by `tools/gen-class-catalog.mjs`.

> Legend: C=class S=struct I=interface E=enum. 🔗 = has a deep doc page.

## (global) (8)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [BuildInfo](./campaign-ext/BuildInfo) | 🔗 |
| C | [EmptyGamepadNavigationContext](./campaign-ext/EmptyGamepadNavigationContext) | 🔗 |
| C | [GauntletGamepadNavigationContext](./campaign-ext/GauntletGamepadNavigationContext) | 🔗 |
| I | [IChatHandler](./campaign-ext/IChatHandler) | 🔗 |
| I | [IGamepadNavigationContext](./campaign-ext/IGamepadNavigationContext) | 🔗 |
| C | [MonoNativeFunctionWrapperAttribute](./campaign-ext/MonoNativeFunctionWrapperAttribute) | 🔗 |
| C | [MonoPInvokeCallbackAttribute](./campaign-ext/MonoPInvokeCallbackAttribute) | 🔗 |
| E | [WindingOrder](./campaign-ext/WindingOrder) | 🔗 |

## MBHelpers (1)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | BannerHelper | — |

## Sandbox.View.GameStates (1)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [PreloadState](./campaign-ext/PreloadState) | 🔗 |

## TaleWorlds.AchievementSystem (4)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [Achievement](./campaign-ext/Achievement) | 🔗 |
| C | [AchievementManager](./campaign-ext/AchievementManager) | 🔗 |
| I | [IAchievementService](./campaign-ext/IAchievementService) | 🔗 |
| C | [TestAchievementService](./campaign-ext/TestAchievementService) | 🔗 |

## TaleWorlds.ActivitySystem (6)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [Activity](./campaign-ext/Activity) | 🔗 |
| C | [ActivityManager](./campaign-ext/ActivityManager) | 🔗 |
| E | [ActivityOutcome](./campaign-ext/ActivityOutcome) | 🔗 |
| E | [ActivityTransition](./campaign-ext/ActivityTransition) | 🔗 |
| I | [IActivityService](./campaign-ext/IActivityService) | 🔗 |
| C | [TestActivityService](./campaign-ext/TestActivityService) | 🔗 |

## TaleWorlds.Avatar.PlayerServices (1)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [AvatarServices](./campaign-ext/AvatarServices) | 🔗 |

## TaleWorlds.LinQuick (2)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [LinQuick](./campaign-ext/LinQuick) | 🔗 |
| C | [Min](./campaign-ext/Min) | 🔗 |

## TaleWorlds.ModuleManager (9)

| | 名称 Name | 文档 Doc |
|---|---|---|
| S | [DependedModule](./campaign-ext/DependedModule) | 🔗 |
| C | Extensions | — |
| I | [IPlatformModuleExtension](./campaign-ext/IPlatformModuleExtension) | 🔗 |
| E | [ModuleCategory](./campaign-ext/ModuleCategory) | 🔗 |
| C | [ModuleHelper](./campaign-ext/ModuleHelper) | 🔗 |
| C | [ModuleInfo](./campaign-ext/ModuleInfo) | 🔗 |
| E | [ModuleType](./campaign-ext/ModuleType) | 🔗 |
| C | [SubModuleInfo](./campaign-ext/SubModuleInfo) | 🔗 |
| E | [SubModuleTags](./campaign-ext/SubModuleTags) | 🔗 |

## TaleWorlds.Starter.Library (1)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | Program | — |

## psai.Editor (10)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [AudioData](./campaign-ext/AudioData) | 🔗 |
| E | [CompatibilityReason](./campaign-ext/CompatibilityReason) | 🔗 |
| E | [CompatibilitySetting](./campaign-ext/CompatibilitySetting) | 🔗 |
| E | [CompatibilityType](./campaign-ext/CompatibilityType) | 🔗 |
| C | [Group](./campaign-ext/Group) | 🔗 |
| C | [ProjectProperties](./campaign-ext/ProjectProperties) | 🔗 |
| C | [PsaiMusicEntity](./campaign-ext/PsaiMusicEntity) | 🔗 |
| C | [PsaiProject](./campaign-ext/PsaiProject) | 🔗 |
| C | [Segment](./campaign-ext/Segment) | 🔗 |
| C | [Theme](./campaign-ext/Theme) | 🔗 |

## psai.net (19)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | AudioData | — |
| C | [AudioPlaybackLayerChannelStandalone](./campaign-ext/AudioPlaybackLayerChannelStandalone) | 🔗 |
| S | [Follower](./campaign-ext/Follower) | 🔗 |
| C | [PlaybackChannel](./campaign-ext/PlaybackChannel) | 🔗 |
| C | [PsaiCore](./campaign-ext/PsaiCore) | 🔗 |
| S | [PsaiInfo](./campaign-ext/PsaiInfo) | 🔗 |
| E | [PsaiPlayMode](./campaign-ext/PsaiPlayMode) | 🔗 |
| E | [PsaiResult](./campaign-ext/PsaiResult) | 🔗 |
| E | [PsaiState](./campaign-ext/PsaiState) | 🔗 |
| C | Segment | — |
| C | [SegmentInfo](./campaign-ext/SegmentInfo) | 🔗 |
| E | [SegmentSuitability](./campaign-ext/SegmentSuitability) | 🔗 |
| C | [Soundtrack](./campaign-ext/Soundtrack) | 🔗 |
| C | [SoundtrackInfo](./campaign-ext/SoundtrackInfo) | 🔗 |
| C | Theme | — |
| C | [ThemeInfo](./campaign-ext/ThemeInfo) | 🔗 |
| E | [ThemeInterruptionBehavior](./campaign-ext/ThemeInterruptionBehavior) | 🔗 |
| E | [ThemeType](./campaign-ext/ThemeType) | 🔗 |
| C | [Weighting](./campaign-ext/Weighting) | 🔗 |
